--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <div class="slider-dots"></div>
     </section>
 
-    <a href="Files/من نحن.docx" class="btn btn-warning btn-full" target="_blank">من نحن</a>
+    <a href="./who.html" class="btn btn-warning btn-full" target="_blank">من نحن</a>
 
     <section id="services" class="section-padding">
       <div class="container">
