--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <span class="lang-en">services</span>
             <span class="lang-de">Dienstleistungen</span>
           </a>
-          <a href="contact-form.html" class="cta-button">
+          <a href="./contact-form.htmt" class="cta-button">
             <span class="lang-ar">تواصل معنا</span>
             <span class="lang-en">contact Us</span>
             <span class="lang-de">Kontakt</span>
@@ -109,7 +109,7 @@
         </div>
       </div>
 
-      <div class="hero-slide" style="background-image: url('images/c09b8e66-8fe7-40ac-89f0-b43e0c75b295.jfif')">
+      <div class="hero-slide" style="background-image: url('images/b3e3edfd-a9f5-4cd7-ad5e-c86b6187064e.jfif')">
         <div class="hero-overlay"></div>
         <div class="container hero-content">
           <div class="experience-badge">
